Prune packages json and add configurations

--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
-  "name": "my-storybook-react",
+  "name": "jdac-storybook-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
+  "typings": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "homepage": "https://github.com/JD1927",
+  "repository": {
+    "url": "https://github.com/JD1927/my-storybook-react",
+    "type": "git"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
